--- a/kafka/include/etc/confluent/docker/log4j.properties.template
+++ b/kafka/include/etc/confluent/docker/log4j.properties.template
@@ -5,15 +5,58 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d] %p %m (%c)%n
 
+log4j.appender.kafkaAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.kafkaAppender.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.kafkaAppender.File=${kafka.logs.dir}/server.log
+log4j.appender.kafkaAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.kafkaAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
+
+log4j.appender.stateChangeAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.stateChangeAppender.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.stateChangeAppender.File=${kafka.logs.dir}/state-change.log
+log4j.appender.stateChangeAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.stateChangeAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
+
+log4j.appender.requestAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.requestAppender.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.requestAppender.File=${kafka.logs.dir}/kafka-request.log
+log4j.appender.requestAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.requestAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
+
+log4j.appender.cleanerAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.cleanerAppender.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.cleanerAppender.File=${kafka.logs.dir}/log-cleaner.log
+log4j.appender.cleanerAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.cleanerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
+
+log4j.appender.controllerAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.controllerAppender.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.controllerAppender.File=${kafka.logs.dir}/controller.log
+log4j.appender.controllerAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.controllerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
+
+log4j.appender.authorizerAppender=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.authorizerAppender.DatePattern='.'yyyy-MM-dd-HH
+log4j.appender.authorizerAppender.File=${kafka.logs.dir}/kafka-authorizer.log
+log4j.appender.authorizerAppender.layout=org.apache.log4j.PatternLayout
+log4j.appender.authorizerAppender.layout.ConversionPattern=[%d] %p %m (%c)%n
+
+log4j.additivity.kafka.network.RequestChannel$=false
+log4j.additivity.kafka.request.logger=false
+log4j.additivity.kafka.controller=false
+log4j.additivity.kafka.log.LogCleaner=false
+log4j.additivity.state.change.logger=false
+log4j.additivity.kafka.authorizer.logger=false
+
 {% set loggers = {
-  'kafka': 'INFO',
-  'kafka.network.RequestChannel$': 'WARN',
-  'kafka.producer.async.DefaultEventHandler': 'DEBUG',
-  'kafka.request.logger': 'WARN',
-  'kafka.controller': 'TRACE',
-  'kafka.log.LogCleaner': 'INFO',
-  'state.change.logger': 'TRACE',
-  'kafka.authorizer.logger': 'WARN'
+  'kafka': 'INFO, kafkaAppender',
+  'kafka.network.RequestChannel$': 'WARN, requestAppender',
+  'kafka.producer.async.DefaultEventHandler': 'DEBUG, kafkaAppender',
+  'kafka.request.logger': 'WARN, requestAppender',
+  'kafka.controller': 'TRACE, controllerAppender',
+  'kafka.log.LogCleaner': 'INFO, cleanerAppender',
+  'state.change.logger': 'TRACE, stateChangeAppender',
+  'kafka.authorizer.logger': 'WARN, authorizerAppender'
   } -%}
 
 
