--- a/zookeeper/include/etc/confluent/docker/log4j.properties.template
+++ b/zookeeper/include/etc/confluent/docker/log4j.properties.template
@@ -1,4 +1,4 @@
-log4j.rootLogger={{ env["ZOOKEEPER_LOG4J_ROOT_LOGLEVEL"] | default('INFO') }}, stdout
+log4j.rootLogger={{ env["ZOOKEEPER_LOG4J_ROOT_LOGLEVEL"] | default('INFO') }}, stdout, ROLLINGFILE, TRACEFILE
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
